fix(button): wrong color on active state

--- a/assets/styles/components/_filter-dropdown.scss
+++ b/assets/styles/components/_filter-dropdown.scss
@@ -36,7 +36,7 @@
 	}
 
 	&__active-filter {
-		background-color: var(--blue-200);
+		background-color: var(--primary);
 		color: var(--white-100);
 		display: flex;
 		gap: 0.25rem;
