--- a/assets/styles/components/_letter-filter.scss
+++ b/assets/styles/components/_letter-filter.scss
@@ -34,16 +34,16 @@
 		--spacing: #{vars.$spacer * 0.25};
 		--size-font: 1rem;
 		--width-min: 1.4rem;
+		--color: var(--primary);
 
 		font-size: var(--size-font);
 		padding: var(--spacing);
 		width: 100%;
 		height: 100%;
-		color: #fff;
+		text-transform: var(--transform-text, uppercase);
 
-		&:not(.c-letter-filter__button--all) {
-			color: var(--primary);
-			text-transform: uppercase;
+		&.c-letter-filter__button--all {
+			--transform-text: none;
 		}
 	}
 
